# web-board-project

./: README.md  manage.py  pyproject.toml
accounts/: forms.py  views.py
accounts/tests/: test_password_change_view.py  test_password_reset_complete_view.py  test_password_reset_confirm_view.py  test_password_reset_done_view.py  test_password_reset_mail.py  test_password_reset_view.py  test_signup_view.py
apps/: asgi.py  settings.py  urls.py  wsgi.py
boards/: forms.py  models.py  views.py
boards/migrations/: 0001_initial.py  0002_topic_views.py
boards/templatetags/: form_tags.py
boards/tests/: test_board_topics_view.py  test_edit_post_view.py  test_home_view.py  test_new_topic_views.py  test_reply_topic_view.py  test_templatetags.py  test_topic_posts_view.py  test_views.py
templates/: base.html  base_accounts.html  edit_post.html  home.html  login.html  new_topic.html  password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  reply_topic.html  signup.html  topic_posts.html  topics.html
templates/includes/: form.html
