[project]
name = "web-board-project"
version = "0.1.0"
description = "A Complete Beginner's Guide to Django"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["django>=6.0.5"]

[dependency-groups]
dev = ["ruff>=0.15.12", "ty>=0.0.34"]

[tool.ruff]
target-version = "py314"
line-length = 320
indent-width = 4
exclude = [".git", ".gitignore", ".venv", ".vscode", "__pypackages__"]

[tool.ruff.lint]
select = ["ALL"]
exclude = ["__init__.py"]
ignore = [
    "ANN401",
    "COM812",
    "D100",
    "D101",
    "D102",
    "D106",
    "D107",
    "E741",
    "F405",
    "FBT001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.isort]
split-on-trailing-comma = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
no-lines-before = ["local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty]
